# penalized-splines

./: LICENSE.txt  README.md  example.py  monotone_splines.py  penalized_splines.py  pyproject.toml
